# bs

./: .gitignore  install_blender_addon.py  pupil_info.json  pyproject.toml  requirements.txt  run_blender_viz.sh
.github/workflows/: writerside-docs-deploy.yml
Cameras/: multicamera_recording.py  philips_camera_notes.md  pyproject.toml  shopping_list.md
Cameras/dianostics/: file_explore.py  skellycam_plots.py
Cameras/exploration_scripts/: dummy_synchronize.py  file_explore.py  timestamp_synchronize.py
Cameras/pylon_samples/: enumerate_and_configure.py  grab_and_display.py
Cameras/test_scripts/: file_explore.py  timestamp_synchronize.py
Writerside/: bs.tree  lfkb.tree  redirection-rules.xml  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: 2d-Tracking-Data.md  2d-Tracking.md  3d-Reconstruction.md  3d-Trajectory-Data.md  Anatomy-based-eye-movements.md  Base-of-Support.md  Basic-Plan.md  Behavioral-Development-Profiles.md  Behavioral.md  Biomechanical-Analyses.md  Body-Data.md  Body-Related-Analyses.md  Body-Segment.md  Calibration.md  CameraCalibrationData.md  Cameras.md  CaptureVolumeCalibration.md  Computer.md  Curl-Fields.md  DerivedData.md  Divergence-Fields.md  Environment.md  Estimated-Gaze-World-Intersection.md  Eye-Videos.md  Eye-in-head.md  Force-Plate-Data.md  Force-Plates.md  Full-Body.md  Full-body-Center-of-Mass.md  Gaze-Data.md  Gaze-Head-Body-Locomotion-Cascades.md  Gaze-in-world.md  Hardware.md  Integrated-Laser-Skeleton.md  Jerk-Minimization.md  Joint-Angles.md  Joint-Coordinatin.md  KInematic-Analyses.md  Kinematic-Data-Validation.md  Linear-Inverted-Pendulum.md  (+26 more)
code/animal_tracking/: multi_video_labeller.py  video_clicks.csv
code/cameras/: README.md  multicamera_recording.py  postprocess.py
code/optical_flow/: find_crops.py  run_simple_optical_flow.py
docs/Writerside/: lfkb.tree
notes/: 2024-04-15-project-planning.md  2025-01-24-retinal-projection-math.md  2025-03-30-jon-outline.md  2025-05-08-ems-talk.md  2025-06-03-ferret-research-planning.md  running-notes.md
python_code/: negative_values_check.py
(+534 files in other folders)
